<resources>
    <string name="app_name">RecycleRally</string>
    <string name="google_geo_API_KEY">AIzaSyCWn-NNjpOV1XJrclOeZnBAiTzSEQhtN4U</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="start_app_welcome_title">Welcome to</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="start_recycling_diary">Recycling Diary</string>
    <string name="start_computer_vision_ai">Computer Vision AI</string>
    <string name="start_community">Community based activities</string>
    <string name="start_app_welcome">Recycle Rally!</string>
    <string name="start_diary_explanation">Keep track of the items you recycle everyday</string>
    <string name="start_ai_explanation">Instantly classify your recycled items \nusing state of the art AI</string>
    <string name="start_community_explanation">Join a community with the common goal of making our world greener</string>
    <string name="start_description_checkered_flag">checkered flag</string>
    <string name="login_title">Log into \nyour account</string>
    <string name="login_username">username</string>
    <string name="login_password">password</string>
    <string name="login_forgot_your_password"><u>Forgot your password ?</u></string>
    <string name="login_link_sign_up"><u>Sign up</u></string>
    <string name="login_don_t_have_an_account">Don\'t have an account ?</string>
    <string name="login_let_s_go">Let\'s go !</string>
    <string name="signup_create_an_account">Create an account</string>
    <string name="signup_choose_your_password">choose your password</string>
    <string name="signup_choose_your_username">choose your username</string>
    <string name="signup_enter_your_email">enter your email</string>
    <string name="signup_date_of_birth_format">date of birth (dd/MM/yyyy)</string>
    <string name="signup_sign_up">Sign up !</string>
    <string name="signup_already_have_an_account">Already have an account ?</string>
    <string name="signup_log_in"><u>Log in</u></string>
    <string name="login_remember_me">Remember me</string>
    <string name="menu_home">Home</string>
    <string name="menu_diary">Diary</string>
    <string name="menu_challenges">Challenges</string>
    <string name="menu_profile">Profile</string>
    <string name="home_hello_username">Hello, \n%1$s !</string>
    <string name="home_leaderboard">Leaderboard</string>
    <string name="home_fab_description_add_recycled_item">Add recycled item</string>
    <string name="home_sv_description_global_user_leaderboard">Global user leaderboard</string>
    <string name="menu_about">About</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="nav_header_recycle_rally">Recycle Rally</string>
    <string name="nav_header_description_icon">Nav Header Icon</string>
    <string name="items_title">Your recycled items</string>
    <string name="items_description_list_of_recycled_items">List of recycled items</string>
    <string name="challenges_title">Ongoing challenges</string>
    <string name="challenges_description_list_of_challenges">List of ongoing challenges</string>
    <string name="profile_username">%1$s</string>
    <string name="about_us">About us</string>
    <string name="about_description">copyright 2024 RecycleRally</string>
    <string name="tutorial_title">Tutorial \n- Using RecycleRally</string>
    <string name="tutorial_paragraphOne">Hello !</string>
    <string name="settings_title">Settings</string>
    <string name="settings_modify_account_credentials">Modify account credentials</string>
    <string name="settings_change_your_email"><u>Change your email</u></string>
    <string name="settings_change_your_password"><u>Change your password</u></string>
    <string name="settings_email">Email: %1$s</string>
    <string name="profile_points">%1$d points</string>
    <string name="profile_joined_on">Joined on …</string>
    <string name="toast_home_is_selected">Home is selected</string>
    <string name="toast_about_is_selected">About is selected</string>
    <string name="toast_tutorial_is_selected">Tutorial is selected</string>
    <string name="toast_settings_is_selected">Settings is selected</string>
    <string name="toast_logging_out">Logging out …</string>
    <string name="toast_items_are_loading">Items are loading</string>
    <string name="toast_challenges_are_loading">Challenges are loading</string>
    <string name="toast_profile_is_selected">Profile is selected</string>
    <string name="signup_choose_user_type">choose user type</string>
    <string name="signup_rb_recycler">Recycler</string>
    <string name="signup_rb_admin">Admin</string>
    <string name="toast_invalid_username">Invalid username. Username length needs to be between 3 and 25 characters.</string>
    <string name="toast_invalid_email_address">Invalid email address.</string>
    <string name="toast_invalid_password">Invalid password. Password needs to be a minimum of 6 characters.</string>
    <string name="toast_signup_successful">Signup successful !</string>
    <string name="toast_signup_failed">Signup failed</string>
    <string name="toast_login_successful">Login successful !</string>
    <string name="toast_login_failed">Login failed.</string>
    <string name="toast_login_invalid_password">Invalid password.</string>
    <string name="toast_login_invalid_email">Invalid email.</string>
    <string name="toast_login_please_enter_valid_email">Please enter valid email.</string>
    <string name="exception_this_email_is_already_registered">This email is already registered.</string>
    <string name="exception_user_does_not_exist_or_is_no_longer_valid">User does not exist or is no longer valid.</string>
    <string name="exception_invalid_credentials">Invalid credentials.</string>
    <string name="item_recycler_username">%1$s</string>
    <string name="item_recycler_position">%1$d.</string>
    <string name="item_recycler_points">%1$d points</string>
    <string name="dialog_enter_your_email_here">enter your email here</string>
    <string name="dialog_forgot_your_password">Forgot your password ?</string>
    <string name="dialog_reset_password">Reset password</string>
    <string name="dialog_email_sent">Email sent!</string>
    <string name="dialog_failed_to_send_email">Failed to send email…</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_yes">YES</string>
    <string name="toast_profile_image_updated">Profile image updated</string>
    <string name="toast_failed_to_update_profile_image">Failed to update profile image</string>
    <string name="toast_no_file_selected">No file selected</string>
    <string name="item_recycled_registered">Registered in Challenge: %1$s</string>
    <string name="item_recycled_date_posted">Date Posted: %1$s</string>
    <string name="item_recycled_type">Item Type: %1$s</string>
    <string name="add_post_algorithm_classification">Algorithm classification:</string>
    <string name="add_post_algorithm_classification_result">-</string>
    <string name="add_post_recycle_item">Recycle item</string>
    <string name="description_uploaded_item_image">Uploaded Item Image</string>
    <string-array name="user_types">
        <item>Recycler</item>
        <item>Admin</item>
    </string-array>
    <string-array name="item_types">
        <item>CARDBOARD</item>
        <item>GLASS</item>
        <item>METAL</item>
        <item>PAPER</item>
        <item>PLASTIC</item>
        <item>TRASH</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_challenge_ready_set_go">Ready, set… go!</string>
    <string name="add_challenge_make_a_challenge">Make a Challenge</string>
    <string name="challenge_start_date">start date</string>
    <string name="challenge_end_date">end date</string>
    <string name="add_challenge_text">Challenge the community to recycle a number of items of a certain type</string>
    <string name="add_challenge_number_of_items">number of items</string>
    <string name="item_challenge_start_date">Start date: %1$s</string>
    <string name="item_challenge_end_date">End date: %1$s</string>
    <string name="item_challenge_text">Recycle %1$d %2$s items</string>
    <string name="item_challenge_join">Join</string>
    <string name="admin_items_posted_items">Posted items</string>
    <string name="item_challenge_view_participants">Participants</string>
    <string name="login_email">email</string>
    <string name="profile_recycling_points_near_you">Recycling locations near you:</string>
    <string name="description_map_preview_leading_to_recycling_points_nearby">map preview leading to recycling points nearby</string>
    <string name="toast_location_required">Location permission is required to show nearby recycling centers.</string>
    <string name="toast_could_not_retrieve_your_location">Could not retrieve your location.</string>
    <string name="toast_google_maps_app_is_not_installed">Google Maps app is not installed</string>
    <string name="log_check_map_iv_population">ivMap is null. Check the XML layout and ensure the ID is correct.</string>
    <string name="dialog_upload_new_profile_image">Upload new profile image</string>
    <string name="dialog_apply_changes">Apply changes?</string>
    <string name="log_image_url_is_empty_or_null">Image URL is empty or null</string>
    <string name="log_user_is_unavailable">User is unavailable</string>
    <string name="log_loaded_image_url_on_profile">"Loaded image URL on profile "</string>
    <string name="profile_admin">Admin</string>
    <string name="log_recyclers_data_retrieved_setting_adapter">Recyclers data retrieved, setting adapter</string>
    <string name="log_error_retrieving_recyclers">Error retrieving recyclers</string>
    <string name="toast_please_select_a_valid_date_to_end_the_challenge">Please select a valid date to end the Challenge</string>
    <string name="toast_the_maximum_number_of_recycled_items_for_a_challenge_is_10">The maximum number of recycled items for a Challenge is 10</string>
    <string name="log_challenges_data_retrieved_setting_adapter">Challenges data retrieved, setting adapter</string>
    <string name="log_error_retrieving_challenges">Error retrieving challenges</string>
    <string name="add_post_your_feedback">Your feedback:</string>
    <string name="about_p1">Welcome to RecycleRally, your ultimate companion in the journey towards a cleaner, greener planet. \n\nAt RecycleRally, we believe that every small step towards recycling can lead to significant environmental impact.</string>
    <string name="about_sh1">\nOur purpose</string>
    <string name="about_p2">We wish to transform recycling from a mundane task into an engaging, competitive, and educational experience. \n\nRecycleRally is designed to encourage and inspire you to recycle more effectively and consistently. By participating in various recycling challenges, you can compete with other eco-conscious users, track your progress, and celebrate your contributions to the environment. \n\nOur app not only makes recycling fun but also helps you maintain a Recycling Diary to reflect on your efforts and stay motivated.</string>
    <string name="about_sh2">\nHarnessing the power of AI</string>
    <string name="about_p3">At the heart of RecycleRally is a powerful computer vision model that classifies the items you recycle. \n\nAs you document your recycled materials, our AI learns and improves, building a comprehensive data bank to enhance its accuracy and efficiency. \n\nThis innovative use of artificial intelligence not only simplifies your recycling process but also contributes to advancing the technology for waste management.</string>
</resources>