<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <item
        android:title=""
        android:enabled="false">
    </item>

    <item
        android:id="@id/nav_home"
        android:icon="@drawable/home_24px"
        android:title="@string/menu_home" />

    <item
        android:title=""
        android:enabled="false">
    </item>

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/star_24px"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@drawable/rocket_24px"
            android:title="@string/menu_tutorial" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_24px"
            android:title="@string/menu_settings" />
    </group>

    <item
        android:title=""
        android:enabled="false">
    </item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/power_24px"
        android:title="@string/menu_logout" />

</menu>