<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_blue_gradient"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/login_tv_title"
        style="@style/Titles"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/login_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_tv_title"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="48dp"
        style="@style/TextInputLayoutStyle"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_tiet_username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/login_username"
            style="@style/TextInputEditTextStyle" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_til_username"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="16dp"
        style="@style/TextInputLayoutStyle"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_tiet_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_password"
            style="@style/TextInputEditTextStyle" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_tv_forgot_password"
        style="@style/TextLink"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:text="@string/login_forgot_your_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_til_password" />

    <CheckBox
        android:id="@+id/login_remember_me"
        style="@style/TextSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_remember_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_tv_forgot_password"
        android:checked="true"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_tv_dont_have_an_account"
        android:layout_marginBottom="16dp"
        style="@style/ButtonsRegular"
        android:text="@string/login_let_s_go" />

    <TextView
        android:id="@+id/login_tv_dont_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_tv_sign_up"
        android:layout_marginBottom="8dp"
        style="@style/TextRegular"
        android:text="@string/login_don_t_have_an_account" />

    <TextView
        android:id="@+id/login_tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        style="@style/TextLink"
        android:text="@string/login_link_sign_up"
        android:clickable="true"
        />

</androidx.constraintlayout.widget.ConstraintLayout>