<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_forgot_your_password"
        style="@style/Subtitles"
        android:layout_gravity="center_horizontal" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dialog_tiet_forgot_password_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_enter_your_email_here"
        style="@style/TextInputLayoutStyle"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:layout_gravity="center_horizontal"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_btn_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_reset_password"
        style="@style/ButtonsRegular"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
