<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/add_post_iv"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:contentDescription="@string/description_uploaded_item_image"
    android:scaleType="centerCrop"
    android:src="@drawable/add_photo_24px" />

    <TextView
    android:id="@+id/add_post_tv_result"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/add_post_algorithm_classification"
    style="@style/TextSmall"
    android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/add_post_spn_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/item_types"
        android:minHeight="48dp"/>

    <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/add_post_btn_save"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:layout_gravity="center"
    android:layout_marginTop="16dp"
        style="@style/ButtonsRegular"
    android:text="@string/add_post_recycle_item" />

    </LinearLayout>